cart dropdown fix z-indexed

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -23,6 +23,7 @@
     .modal {
       width: 40rem;
       left: calc(50% - 20rem);
+      z-index: 4000;
     }
   }
   @keyframes slide-down {
